@@ -5,7 +5,7 @@ use Test::Most;
 use lib 't/lib';
 use MooTest;
 
-ok my $o = MooTest->new;
+ok my $o = MooTest->new( cr => 4 ), "new test object";
 
 lives_ok {
     ++$o->foo->[0];
@@ -42,5 +42,14 @@ dies_ok {
     $o->bo->{c};
 
 } 'cannot access a non-existent key attribute (write once)';
+
+
+ok $o->cr, "can access sub isa attribute";
+
+dies_ok {
+
+    $o->cr(10);
+
+} 'cannot change sub isa attribute';
 
 done_testing;
