@@ -5,9 +5,13 @@ Revision history for {{ $dist->name }}:
   - Minimum Perl version is v5.20.
 
   [Enhancements]
+  - The isa option of attributes can be a code reference.
+
   - Internal code improvements.
 
   [Documentation]
+  - Clarified the documentation on the isa option of attributes.
+
   - Fixed cut-and-paste error in CONTRIBUTING.md.
 
   - Fixed errors in the README.
